# project-football-manager-helper

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api-documentation.md  development-plan-2025-08-11.md
fm-helper-env/: pyvenv.cfg
fm-helper-env/Scripts/: activate  activate.bat
src/football_manager/: __init__.py
src/football_manager/application/: __init__.py
src/football_manager/application/interfaces/: __init__.py
src/football_manager/console/: __init__.py
src/football_manager/core/: __init__.py
src/football_manager/core/enums/: __init__.py  position.py
src/football_manager/core/interfaces/: __init__.py
src/football_manager/core/models/: __init__.py  player.py
src/football_manager/core/value_objects/: __init__.py  player_stats.py
src/football_manager/infrastructure/: __init__.py
src/football_manager/infrastructure/data/: __init__.py
tests/: conftest.py
tests/unit/core/models/: __init__.py  test_player.py
tests/unit/core/value_objects/: __init__.py  test_player_stats.py
