[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-manager-helper"
version = "0.1.0"
description = "A helper tool for football manager"
authors = [
    { name = "Bradley Bodee", email = "bradley.bodee@proton.me" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.10.1",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    ]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"